# learn-c-cpp

./: README.md
basic-print-helloworld/: CMakeLists.txt  file.txt  hello.cpp
basic-print-helloworld/src/: main.c  some_func.h
basic-print-helloworld/src/include/: callme.h
containerized/: Dockerfile  Dockerfile.bak  Makefile.bak  README.md  main.cpp
games/tetris/src/: grid.cpp  grid.h  main.cpp
http-c-cpp/: CMakeLists.txt  Makefile
http-c-cpp/.cache/clangd/index/: hellobrowser.c.99D82922F1BAADDB.idx
http-c-cpp/src/: hellobrowser2.c
learn-ptr/: pointers.c
macApp/: CMakeLists.txt
macApp/src/: main.m
macApp/src/headers/: XYZPerson.h  XYZShoutingPerson.h
macApp/src/headers/impl/: XYZPerson.m  XYZShoutingPerson.m
using-bazel/: BUILD.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-using-bazel  hello_world.cc
